--- a/styles/10footer.css
+++ b/styles/10footer.css
@@ -45,7 +45,7 @@ footer {
     right: 0;
     bottom: 0;
     background-color: #011A41;
-    width: 1237px;
+    width: 100%;
     height: 330px;
     display: flex;
     justify-content: space-around;
